--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial Genrator</title>
+    <title>Tutorial Generator</title>
+    <img src=""\Resources\tutorial-generator-logo.png"" alt="">
 </head>
 <body>
-    
+    <img src="".\Resources\tutorial-generator-logo.png"" alt="">
 </body>
 </html>
