--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial Generator</title>
-    <img src=""\Resources\tutorial-generator-logo.png"" alt="">
+    <meta name="theme-color" content="#191818">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <title>| Tutorial Generator |</title>
+
+    <!-- <link rel="apple-touch-icon" sizes="120x120" href="Resources/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon/favicon-16x16.png">
+    <link rel="manifest" href="Resources/favicon/site.webmanifest">
+    <link rel="mask-icon" href="Resources/favicon/safari-pinned-tab.svg" color="#5bbad5"> -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="Resources/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
 </head>
 <body>
-    <img src="".\Resources\tutorial-generator-logo.png"" alt="">
+    
 </body>
 </html>
