--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <title>| Tutorial Generator |</title>
 
+    <!-- fave icon folder vale tags -->
     <!-- <link rel="apple-touch-icon" sizes="120x120" href="Resources/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon/favicon-16x16.png">
@@ -18,9 +19,31 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-daek bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+            <img class = "logo" src="Resources/favicon_io/android-chrome-512x512.png" alt="" width="40" height="40" class="d-inline-block align-text-top">
+                               Tutorial Generator
+        </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link active ms-auto" aria-current="page" href="#">login</a>
+              <a class="nav-link active ms-auto" aria-current="page" href="#">rgister</a>
+            </div>
+          </div>
+        </div>
+    </nav>
+    <div class ="heros-back">
+        <img class ="backimg" src="Resources/banner.png" alt="">
+    </div>
 </body>
 </html>
