login and register page added

--- a/register.html
+++ b/register.html
@@ -27,8 +27,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-daek bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-            <img class = "logo" src="Resources/favicon_io/android-chrome-512x512.png" alt="" width="40" height="40" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html">
+            <img class = "logo" src="Resources/favicon_io/android-chrome-512x512.png" alt="" width="40" height="40" class="d-inline-block align-text-top" href="index.html">
                                Tutorial Generator
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,12 +37,13 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link active ms-auto" aria-current="page" href="login.html">login</a>
-              <a class="nav-link active ms-auto" aria-current="page" href="register.html">rgister</a>
             </div>
           </div>
         </div>
     </nav>
+    
     <div class ="heros-back">
+        <h1 style="text-align: center;">Register here</h1>
         <img class ="backimg" src="Resources/banner.png" alt="">
     </div>
 </body>
