--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
 </head>
-<body>
+<body class="body">
     <nav class="navbar navbar-expand-lg navbar-daek bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
@@ -42,7 +42,7 @@
         </div>
     </nav>
     <div class ="heros-back">
-        <h1 style="text-align: center;">Login here</h1>
+        <h1 style="text-align: left; margin-left: 25%;">Login here</h1>
         <img class ="backimg" src="Resources/banner.png" alt="">
     </div>
 </body>
