--- a/register.html
+++ b/register.html
@@ -24,27 +24,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
 </head>
-<body>
+<body class="rbody">
     <nav class="navbar navbar-expand-lg navbar-daek bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.html" style="color: white;">
             <img class = "logo" src="Resources/favicon_io/android-chrome-512x512.png" alt="" width="40" height="40" class="d-inline-block align-text-top" href="index.html">
                                Tutorial Generator
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link active ms-auto" aria-current="page" href="login.html">login</a>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
+            <div class="navbar-nav ms-auto" >
+              <a class="nav-link active ms-auto" aria-current="page" href="login.html" style="color: white;">login</a>
             </div>
           </div>
         </div>
     </nav>
     
-    <div class ="heros-back">
-        <h1 style="text-align: center;">Register here</h1>
-        <img class ="backimg" src="Resources/banner.png" alt="">
+    <div style="display: flex; justify-content: space-between; " class ="MainForm">
+      <div class ="heros-back rfrom">
+          <h1 style="margin-left: 25%;"> Register here</h1>
+        </div>  
+        <div style="border: 1px solid brown;">
+          <img style="" class ="backimg" src="Resources/banner.png" alt="">
+
     </div>
+
 </body>
 </html>
