--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
 </head>
-<body>
+<body class="landingBody">
     <nav class="navbar navbar-expand-lg navbar-daek bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand lk" href="#">
             <img class = "logo" src="Resources/favicon_io/android-chrome-512x512.png" alt="" width="40" height="40" class="d-inline-block align-text-top">
                                Tutorial Generator
         </a>
@@ -35,9 +35,9 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link active ms-auto" aria-current="page" href="login.html">login</a>
-              <a class="nav-link active ms-auto" aria-current="page" href="register.html">rgister</a>
+            <div class="navbar-nav ms-auto ">
+              <a class="nav-link active ms-auto" style="color: white;" aria-current="page" href="login.html">login</a>
+              <a class="nav-link active ms-auto" style ="color:white;" aria-current="page" href="register.html">rgister</a>
             </div>
           </div>
         </div>
