--- a/login.html
+++ b/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#191818">
-    <meta name="msapplication-TileColor" content="#2b5797">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#191818" />
+    <meta name="msapplication-TileColor" content="#2b5797" />
     <title>| Tutorial Generator |</title>
 
     <!-- fave icon folder vale tags -->
@@ -15,35 +15,85 @@
     <link rel="manifest" href="Resources/favicon/site.webmanifest">
     <link rel="mask-icon" href="Resources/favicon/safari-pinned-tab.svg" color="#5bbad5"> -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="Resources/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Resources/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Resources/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
-</head>
-<body class="body">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="Resources/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="Resources/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="Resources/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+
+  <body class="logBody">
     <nav class="navbar navbar-expand-lg navbar-daek bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-            <img class = "logo" src="Resources/favicon_io/android-chrome-512x512.png" alt="" width="40" height="40" class="d-inline-block align-text-top" href ="index.html">
-                               Tutorial Generator
+      <div class="container-fluid" style="color: white">
+        <a class="navbar-brand" href="index.html" style="color: white">
+          <img
+            class="logo"
+            src="Resources/favicon_io/android-chrome-512x512.png"
+            alt=""
+            width="40"
+            height="40"
+            class="d-inline-block align-text-top"
+            href="index.html"
+          />
+          Tutorial Generator
         </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link active ms-auto" aria-current="page" href="register.html">rgister</a>
-            </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a
+              class="nav-link active ms-auto"
+              style="color: white"
+              aria-current="page"
+              href="register.html"
+              >rgister</a
+            >
           </div>
         </div>
+      </div>
     </nav>
-    <div class ="heros-back">
-        <h1 style="text-align: left; margin-left: 25%;"> Login here</h1>
-        <img class ="backimg" src="Resources/banner.png" alt="">
+
+    <div style="display: flex; justify-content: space-between; border: 1px solid white;" style ="MainForm">
+      <div class="">
+        <h1 >Login here</h1>
+      </div>
+      <div style="border: 1px solid brown">
+        <img style="" class="backimg" src="Resources/banner.png" alt="" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
