login input setup

--- a/index.html
+++ b/index.html
@@ -37,13 +37,22 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto ">
               <a class="nav-link active ms-auto" style="color: white;" aria-current="page" href="login.html">login</a>
-              <a class="nav-link active ms-auto" style ="color:white;" aria-current="page" href="register.html">rgister</a>
+              <a class="nav-link active ms-auto" style ="color:white;" aria-current="page" href="register.html">register</a>
             </div>
           </div>
         </div>
     </nav>
-    <div class ="heros-back">
+
+    <div class ="heros-back MainForm" style="justify-content: space-between; display: flex;">
+      <div>
         <img class ="backimg" src="Resources/banner.png" alt="">
+      </div>
+      <div>
+        <div>
+          smonnnn
+        </div>
+        <button>start</button>
+      </div>
     </div>
 </body>
 </html>
