--- a/login.html
+++ b/login.html
@@ -80,19 +80,25 @@
               style="color: white"
               aria-current="page"
               href="register.html"
-              >rgister</a
+              >register</a
             >
           </div>
         </div>
       </div>
     </nav>
 
-    <div style="display: flex; justify-content: space-between; border: 1px solid white;" style ="MainForm">
-      <div class="">
-        <h1 >Login here</h1>
+    <div style="display: flex; justify-content: space-around;" style ="MainForm,">
+      <div class="" style="border: 1px solid white; width: 30%;">
+        <h1 style="text-align: center;">Login here</h1>
+        <form action="">
+
+          <input type="text" placeholder="username">
+          <input type="text" placeholder="********">
+          <input type="button" value="login">
+        </form>
       </div>
       <div style="border: 1px solid brown">
-        <img style="" class="backimg" src="Resources/banner.png" alt="" />
+        <img   class="backimg" src="Resources/banner.png" alt="" />
       </div>
     </div>
   </body>
