--- a/register.html
+++ b/register.html
@@ -42,12 +42,19 @@
         </div>
     </nav>
     
-    <div style="display: flex; justify-content: space-between; " class ="MainForm">
+    <div style="display: flex; justify-content:space-around; " class ="MainForm">
       <div class ="heros-back rfrom">
           <h1 style="margin-left: 25%;"> Register here</h1>
+          <form action="">
+            <input type="text" name="" id="">
+            <input type="text" name="" id="">
+            <input type="text" name="" id="">
+            <input type="text" name="" id="">
+            <button >register</button>
+          </form>
         </div>  
         <div style="border: 1px solid brown;">
-          <img style="" class ="backimg" src="Resources/banner.png" alt="">
+          <img class ="backimg" src="Resources/banner.png" alt="">
 
     </div>
 
