--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
       href="Resources/favicon_io/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/stylelogin.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -87,7 +87,7 @@
       </div>
     </nav>
 
-    <div style="display: flex; justify-content: space-around;" style ="MainForm,">
+    <div style="display: flex; justify-content: space-around;" style ="MainForm">
       <div class="" style="border: 1px solid white; width: 30%;">
         <h1 style="text-align: center;">Login here</h1>
         <form action="">
